--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,12 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  Red:      red,
+  Green:    green,
+  Blue:     blue,
+  Yellow:   yellow,
+  Grey:     grey
 );
 
 
