--- a/src/pages/floor-location/floor-location.scss
+++ b/src/pages/floor-location/floor-location.scss
@@ -8,15 +8,27 @@ page-floor-location {
         height: 100% !important;
         touch-action: none !important;
         position: fixed;
-        
-        .some-item {
-            border: 5px solid red;
-            background-image: url(../assets/test.jpeg);
-            width: 1800px !important;
-            height: 900px !important;
-            background-color: lightcyan;
-            touch-action: none !important;
-            
-        }
     }
+
+    .div1 {
+        position:absolute;
+        width:90%;
+        height: 90%;
+        visibility:visible;
+        z-index:5
+    }
+    .div2 {
+    
+        visibility:hidden;
+        z-index:1;
+    }
+    
+    .div3 {
+        position:absolute;
+        visibility:visible;
+        z-index:10;
+        font-family:monospace;
+        font-size:20px;
+        font-weight:900;
+        color:black;}
 }
