--- a/src/pages/floor-location/floor-location.scss
+++ b/src/pages/floor-location/floor-location.scss
@@ -4,8 +4,9 @@ page-floor-location {
         touch-action: none !important;
     }
     .zoom {
-        width: 100% !important;
-        height: 100% !important;
+        top: 100px;
+        width: 90% !important;
+        height: 90% !important;
         touch-action: none !important;
         position: fixed;
     }
@@ -26,6 +27,15 @@ page-floor-location {
     .div3 {
         position:absolute;
         visibility:visible;
+        z-index:10;
+        font-family:monospace;
+        font-size:20px;
+        font-weight:900;
+        color:black;}
+
+    .div4 {
+        position:absolute;
+        visibility:hidden;
         z-index:10;
         font-family:monospace;
         font-size:20px;
